--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,15 +6,23 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Noom
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-    body
-        header
+    body 
+        header 
             h1 Noom
         main
-            form#nick
-                input(type="text", placeholder="Choose a NickName", required)
-                button Save
-            ul
-            form#msg
-                input(type="text", placeholder="write a msg", required)
-                button Send
-        script(src="/public/js/app.js")  
+            div#welcome 
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+            div#nickname
+                form#name
+                    input(placeholder="nickname", required, type="text")
+                    button Save
+            div#room
+                h3
+                ul
+                form#msg
+                    input(placeholder="message", required, type="text")
+                    button Send
+        script(src="/socket.io/socket.io.js")
+        script(src="/public/js/app.js") 
