--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -14,6 +14,8 @@ html(lang="en")
                 form
                     input(placeholder="room name", required, type="text")
                     button Enter Room
+                h4 Open Room: 
+                ul
             div#nickname
                 form#name
                     input(placeholder="nickname", required, type="text")
